Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@2012 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -17,7 +17,7 @@ tomcat=/home/${tomcat-name}
 tomcat-bin=${tomcat}/bin
 tomcat-webapps=${tomcat}/webapps
 tomcat-shutdown=${profile};cd ${tomcat-bin};${shutdown}
-tomcat-kill=pkill -f '${tomcat-name}'
+tomcat-kill=pkill -9 -f '${tomcat-name}'
 tomcat-chmod=chmod 777 -R ${tomcat}
 tomcat-startup=${profile};cd ${tomcat-bin};${startup}
 
@@ -26,7 +26,7 @@ tomcat-one=/home/${tomcat-name-one}
 tomcat-one-bin=${tomcat-one}/bin
 tomcat-one-webapps=${tomcat-one}/webapps
 tomcat-one-shutdown=${profile};cd ${tomcat-one-bin};${shutdown}
-tomcat-one-kill=pkill -f '${tomcat-name-one}'
+tomcat-one-kill=pkill -9 -f '${tomcat-name-one}'
 tomcat-one-chmod=chmod 777 -R ${tomcat-one}
 tomcat-one-startup=${profile};cd ${tomcat-one-bin};${startup}
 
@@ -35,7 +35,7 @@ tomcat-two=/home/${tomcat-name-two}
 tomcat-two-bin=${tomcat-two}/bin
 tomcat-two-webapps=${tomcat-two}/webapps
 tomcat-two-shutdown=${profile};cd ${tomcat-two-bin};${shutdown}
-tomcat-two-kill=pkill -f '${tomcat-name-two}'
+tomcat-two-kill=pkill -9 -f '${tomcat-name-two}'
 tomcat-two-chmod=chmod 777 -R ${tomcat-two}
 tomcat-two-startup=${profile};cd ${tomcat-two-bin};${startup}
 
@@ -44,7 +44,7 @@ tomcat-three=/home/${tomcat-name-three}
 tomcat-three-bin=${tomcat-three}/bin
 tomcat-three-webapps=${tomcat-three}/webapps
 tomcat-three-shutdown=${profile};cd ${tomcat-three-bin};${shutdown}
-tomcat-three-kill=pkill -f '${tomcat-name-three}'
+tomcat-three-kill=pkill -9 -f '${tomcat-name-three}'
 tomcat-three-chmod=chmod 777 -R ${tomcat-three}
 tomcat-three-startup=${profile};cd ${tomcat-three-bin};${startup}
 
@@ -56,6 +56,6 @@ tomcat-production=/home/${tomcat-name-production}
 tomcat-production-bin=${tomcat-production}/bin
 tomcat-production-webapps=${tomcat-production}/webapps
 tomcat-production-shutdown=${profile};cd ${tomcat-production-bin};${shutdown}
-tomcat-production-kill=pkill -f '${tomcat-name-production}'
+tomcat-production-kill=pkill -9 -f '${tomcat-name-production}'
 tomcat-production-chmod=chmod 777 -R ${tomcat-production}
 tomcat-production-startup=${profile};cd ${tomcat-production-bin};${startup}
