Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@2068 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -20,7 +20,7 @@ tomcat-webapps=${tomcat}/webapps
 tomcat-shutdown=${profile};cd ${tomcat-bin};${shutdown}
 tomcat-kill=pkill -9 -f '${tomcat-name}'
 tomcat-chmod=chmod 777 -R ${tomcat}
-tomcat-startup=${max-user-processes};${profile};cd ${tomcat-bin};${startup}
+tomcat-startup=${profile};cd ${tomcat-bin};${startup}
 
 tomcat-name-one=apache-tomcat-6.0.29-1
 tomcat-one=/home/${tomcat-name-one}
@@ -29,7 +29,7 @@ tomcat-one-webapps=${tomcat-one}/webapps
 tomcat-one-shutdown=${profile};cd ${tomcat-one-bin};${shutdown}
 tomcat-one-kill=pkill -9 -f '${tomcat-name-one}'
 tomcat-one-chmod=chmod 777 -R ${tomcat-one}
-tomcat-one-startup=${max-user-processes};${profile};cd ${tomcat-one-bin};${startup}
+tomcat-one-startup=${profile};cd ${tomcat-one-bin};${startup}
 
 tomcat-name-two=apache-tomcat-6.0.29-2
 tomcat-two=/home/${tomcat-name-two}
@@ -38,7 +38,7 @@ tomcat-two-webapps=${tomcat-two}/webapps
 tomcat-two-shutdown=${profile};cd ${tomcat-two-bin};${shutdown}
 tomcat-two-kill=pkill -9 -f '${tomcat-name-two}'
 tomcat-two-chmod=chmod 777 -R ${tomcat-two}
-tomcat-two-startup=${max-user-processes};${profile};cd ${tomcat-two-bin};${startup}
+tomcat-two-startup=${profile};cd ${tomcat-two-bin};${startup}
 
 tomcat-name-three=apache-tomcat-6.0.29-3
 tomcat-three=/home/${tomcat-name-three}
@@ -47,7 +47,7 @@ tomcat-three-webapps=${tomcat-three}/webapps
 tomcat-three-shutdown=${profile};cd ${tomcat-three-bin};${shutdown}
 tomcat-three-kill=pkill -9 -f '${tomcat-name-three}'
 tomcat-three-chmod=chmod 777 -R ${tomcat-three}
-tomcat-three-startup=${max-user-processes};${profile};cd ${tomcat-three-bin};${startup}
+tomcat-three-startup=${profile};cd ${tomcat-three-bin};${startup}
 
 # The ip address of the production server with Jenkins etc...
 server-production-ip=192.168.1.20
@@ -59,4 +59,4 @@ tomcat-production-webapps=${tomcat-production}/webapps
 tomcat-production-shutdown=${profile};cd ${tomcat-production-bin};${shutdown}
 tomcat-production-kill=pkill -9 -f '${tomcat-name-production}'
 tomcat-production-chmod=chmod 777 -R ${tomcat-production}
-tomcat-production-startup=${max-user-processes};${profile};cd ${tomcat-production-bin};${startup}
+tomcat-production-startup=${profile};cd ${tomcat-production-bin};${startup}
