--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -2,6 +2,7 @@ ikube-war=ikube.war
 
 project-directory=
 resources-directory=code/libs/src/main/resources
+tail-script=code/war/tail.sh
 
 # The ip address of the system test server, 64 core
 server-system-ip=192.168.1.10
