Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@2081 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -12,7 +12,7 @@ merge.factor=1000
 buffered.docs=1000
 max.field.length=1000
 max.read.length=100000
-index.root=/mnt/sdb
+index.root=/tmp
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=1000
