Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@2089 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/environments/sys/spring.properties
+++ b/code/libs/src/main/resources/environments/sys/spring.properties
@@ -190,3 +190,5 @@ consumer-key=Sohh43DylUwaXr7smSojBA
 consumer-secret=90xubtexbSwhHBbKXM62pF4QfJnz1NWVkpevwde3Qxo
 token=380355068-JIMLrQyZglGs4WLXo2UShCmXMAMjWeaiZ15ZJkrp
 token-secret=OyhI9UyioglNWrhJnQQWY2ULmNtt9Azfl70z0l8jOPM
+
+max-training=50000
