--- a/code/libs/src/main/resources/environments/prod/spring.properties
+++ b/code/libs/src/main/resources/environments/prod/spring.properties
@@ -189,3 +189,5 @@ consumer-key=WSQs59mLxb9mGFcPKtJMyw
 consumer-secret=lHfsHqI8IrdpRINHTsZwH7cnqz8pgN7uNt9Jz8bE66Q
 token=2257682162-Z4HFFXnmucyRS3TuCTPE3dOpr2qEYuaE5WiExOp
 token-secret=6YdLo8Udm5SVMO3WGX1753xnKdGp5eBalQBtcKTb19CpI
+
+max-training=10000
