Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@2093 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/environments/prod/spring.properties
+++ b/code/libs/src/main/resources/environments/prod/spring.properties
@@ -191,3 +191,6 @@ token=2257682162-Z4HFFXnmucyRS3TuCTPE3dOpr2qEYuaE5WiExOp
 token-secret=6YdLo8Udm5SVMO3WGX1753xnKdGp5eBalQBtcKTb19CpI
 
 max-training=10000
+
+# How long the analyzer manager will wait before building the analyzers
+analyzer-manager-wait=60000
