--- a/code/libs/src/main/resources/environments/sys/spring.properties
+++ b/code/libs/src/main/resources/environments/sys/spring.properties
@@ -192,3 +192,6 @@ token=380355068-JIMLrQyZglGs4WLXo2UShCmXMAMjWeaiZ15ZJkrp
 token-secret=OyhI9UyioglNWrhJnQQWY2ULmNtt9Azfl70z0l8jOPM
 
 max-training=50000
+
+# How long the analyzer manager will wait before building the analyzers
+analyzer-manager-wait=30000
