Bug fixing and system testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@2103 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -50,6 +50,33 @@ tomcat-three-kill=pkill -9 -f '${tomcat-name-three}'
 tomcat-three-chmod=chmod 777 -R ${tomcat-three}
 tomcat-three-startup=${profile};cd ${tomcat-three-bin};${startup}
 
+tomcat-name-four=apache-tomcat-6.0.29-4
+tomcat-four=/home/${tomcat-name-four}
+tomcat-four-bin=${tomcat-four}/bin
+tomcat-four-webapps=${tomcat-four}/webapps
+tomcat-four-shutdown=${profile};cd ${tomcat-four-bin};${shutdown}
+tomcat-four-kill=pkill -9 -f '${tomcat-name-four}'
+tomcat-four-chmod=chmod 777 -R ${tomcat-four}
+tomcat-four-startup=${profile};cd ${tomcat-four-bin};${startup}
+
+tomcat-name-five=apache-tomcat-6.0.29-5
+tomcat-five=/home/${tomcat-name-five}
+tomcat-five-bin=${tomcat-five}/bin
+tomcat-five-webapps=${tomcat-five}/webapps
+tomcat-five-shutdown=${profile};cd ${tomcat-five-bin};${shutdown}
+tomcat-five-kill=pkill -9 -f '${tomcat-name-five}'
+tomcat-five-chmod=chmod 777 -R ${tomcat-five}
+tomcat-five-startup=${profile};cd ${tomcat-five-bin};${startup}
+
+tomcat-name-six=apache-tomcat-6.0.29-6
+tomcat-six=/home/${tomcat-name-six}
+tomcat-six-bin=${tomcat-six}/bin
+tomcat-six-webapps=${tomcat-six}/webapps
+tomcat-six-shutdown=${profile};cd ${tomcat-six-bin};${shutdown}
+tomcat-six-kill=pkill -9 -f '${tomcat-name-six}'
+tomcat-six-chmod=chmod 777 -R ${tomcat-six}
+tomcat-six-startup=${profile};cd ${tomcat-six-bin};${startup}
+
 # The ip address of the production server with Jenkins etc...
 server-production-ip=192.168.1.20
 
