--- a/pom.xml
+++ b/pom.xml
@@ -1211,6 +1211,12 @@
             <version>1.1.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>net.jpountz.lz4</groupId>
+            <artifactId>lz4</artifactId>
+            <version>1.2.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 	<repositories>
