Adding some logic to the synchronize action.

--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -129,12 +129,12 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>ikube</groupId>
             <artifactId>ikube-war</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>sevenzip</groupId>
             <artifactId>jbinding</artifactId>
