Some cleanup and re-factoring.

--- a/code/libs/src/main/resources/environments/sys/spring.properties
+++ b/code/libs/src/main/resources/environments/sys/spring.properties
@@ -118,7 +118,7 @@ ikube.jdbc.password=${h2.jdbc.password}
 ikube.jdbc.url=${h2.jdbc.url}
 ikube.jdbc.driver=${h2.jdbc.driver}
 ikube.jdbc.dictionary=h2(batchLimit=10000)
-ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
+ikube.dataBaseClass=ikube.database.DataBaseJpaH2
 
 # Db2 database, this database is for testing essentially as
 # there is always an instance running on the server
@@ -130,7 +130,7 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
 #ikube.jdbc.url=${db2.jdbc.url}
 #ikube.jdbc.driver=${db2.jdbc.driver}
 #ikube.jdbc.dictionary=db2(batchLimit=1000)
-#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
+#ikube.dataBaseClass=ikube.database.DataBaseJpaDb2
 
 # Oracle database, this database is for testing essentially as
 # there is always an instance running on the server
@@ -142,7 +142,7 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
 #ikube.jdbc.url=${oracle.jdbc.url}
 #ikube.jdbc.driver=${oracle.jdbc.driver}
 #ikube.jdbc.dictionary=oracle(batchLimit=1000)
-#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaOracle
+#ikube.dataBaseClass=ikube.database.DataBaseJpaOracle
 
 # Postgres ikube database
 #ikube.dataSource=nonXaDataSourcePostgresql
@@ -153,7 +153,7 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
 #ikube.jdbc.url=${postgres.jdbc.url}
 #ikube.jdbc.driver=${postgres.jdbc.driver}
 #ikube.jdbc.dictionary=postgres(batchLimit=1000)
-#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaPostgres
+#ikube.dataBaseClass=ikube.database.DataBaseJpaPostgres
 
 # Grid properties
 hz-instance-name=ikube-sys
