--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -89,3 +89,15 @@ tomcat-production-shutdown=${profile};cd ${tomcat-production-bin};${shutdown}
 tomcat-production-kill=pkill -9 -f '${tomcat-name-production}'
 tomcat-production-chmod=chmod 777 -R ${tomcat-production}
 tomcat-production-startup=${profile};cd ${tomcat-production-bin};${startup}
+
+# The ip address of the production server with the instance to synchronize
+server-synchronize-ip=192.168.1.20
+
+tomcat-name-synchronize=apache-tomcat-7.0.42-1
+tomcat-synchronize=/home/${tomcat-name-synchronize}
+tomcat-synchronize-bin=${tomcat-synchronize}/bin
+tomcat-synchronize-webapps=${tomcat-synchronize}/webapps
+tomcat-synchronize-shutdown=${profile};cd ${tomcat-synchronize-bin};${shutdown}
+tomcat-synchronize-kill=pkill -9 -f '${tomcat-name-synchronize}'
+tomcat-synchronize-chmod=chmod 777 -R ${tomcat-synchronize}
+tomcat-synchronize-startup=${profile};cd ${tomcat-synchronize-bin};${startup}
