Some cleanup and re-factoring.

--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -515,7 +515,23 @@
                             <url>${artifactory}</url>
                         </configuration>
                     </execution>
-
+                    <execution>
+                        <id>install-spring-social-twitter</id>
+                        <goals>
+                            <goal>deploy-file</goal>
+                        </goals>
+                        <phase>install</phase>
+                        <configuration>
+                            <groupId>org.springframework.social</groupId>
+                            <artifactId>spring-social-twitter</artifactId>
+                            <version>1.1.0</version>
+                            <file>tools/spring-social-twitter-1.1.0.jar</file>
+                            <packaging>${packaging}</packaging>
+                            <generatePom>${generate-pom}</generatePom>
+                            <repositoryId>${repository-id}</repositoryId>
+                            <url>${artifactory}</url>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
