--- a/pom.xml
+++ b/pom.xml
@@ -1036,7 +1036,7 @@
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-twitter</artifactId>
-			<version>1.1.0.BUILD-SNAPSHOT</version>
+			<version>1.1.0</version>
 			<scope>compile</scope>
 			<exclusions>
 				<exclusion>
