--- a/pom.xml
+++ b/pom.xml
@@ -423,13 +423,6 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jms</artifactId>
-			<version>${spring.version}</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency> -->
 		<dependency>
 			<groupId>org.apache.xbean</groupId>
 			<artifactId>xbean-spring</artifactId>
@@ -585,13 +578,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-spellchecker</artifactId>
-			<version>${lucene.spellchecker.version}</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency -->
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-spatial</artifactId>
@@ -771,13 +757,6 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.2.1</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.nfunk</groupId>
-			<artifactId>jep</artifactId>
-			<version>2.4.1</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -1059,11 +1038,6 @@
 			<version>${spring.version}</version>
 			<scope>compile</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>lingpipe</groupId>
-			<artifactId>lingpipe</artifactId>
-			<version>4.1.0</version>
-		</dependency> -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-jexl</artifactId>
@@ -1075,27 +1049,11 @@
 			<version>3.2</version>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>javaml</groupId>
-			<artifactId>javaml</artifactId>
-			<version>0.1.7</version>
-		</dependency> -->
-		<!-- <dependency>
-			<groupId>libsvm</groupId>
-			<artifactId>libsvm</artifactId>
-			<version>1.0.0</version>
-		</dependency> -->
-
 		<dependency>
 			<groupId>nz.ac.waikato.cms.weka</groupId>
 			<artifactId>weka-stable</artifactId>
 			<version>3.6.9</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.encog</groupId>
-			<artifactId>encog-core</artifactId>
-			<version>3.0.1</version>
-		</dependency> -->
 		<dependency>
 			<groupId>squiggle</groupId>
 			<artifactId>squiggle</artifactId>
@@ -1106,16 +1064,6 @@
 			<artifactId>spring-security-crypto</artifactId>
 			<version>3.1.4.RELEASE</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-analyzers</artifactId>
-			<version>3.6.2</version>
-		</dependency> -->
-		<!-- <dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-analyzers-common</artifactId>
-			<version>3.6.2</version>
-		</dependency> -->
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers-common</artifactId>
@@ -1123,13 +1071,6 @@
             <type>jar</type>
             <scope>compile</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-spatial</artifactId>
-            <version>${lucene.version}</version>
-            <type>jar</type>
-            <scope>compile</scope>
-		</dependency> -->
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-queries</artifactId>
@@ -1144,20 +1085,6 @@
             <type>jar</type>
             <scope>compile</scope>
 		</dependency>
-        <!--<dependency>
-            <groupId>edu.uci.ics</groupId>
-            <artifactId>crawler4j</artifactId>
-            <version>3.5</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>-->
-        <!--<dependency>
-            <groupId>niocchi</groupId>
-            <artifactId>niocchi</artifactId>
-            <version>1.1</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>-->
         <dependency>
             <groupId>flaxcrawler</groupId>
             <artifactId>flaxcrawler</artifactId>
@@ -1216,6 +1143,11 @@
             <artifactId>lz4</artifactId>
             <version>1.2.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.2.2</version>
         </dependency>
     </dependencies>
 
@@ -1323,7 +1255,6 @@
 				<configuration>
 					<xmlOutput>true</xmlOutput>
 					<findbugsXmlOutput>true</findbugsXmlOutput>
-					<!-- findbugsXmlWithMessages>true</findbugsXmlWithMessages -->
 					<visitors>
 						FindDeadLocalStores,
 						UnreadFields,
