Preparing the presentation.

--- a/release.properties
+++ b/release.properties
@@ -2,7 +2,7 @@
 #Tue Nov 26 13:38:50 CET 2013
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 pushChanges=true
-scm.url=scm\:svn\:https\://ikube.googlecode.com/svn/trunk
+scm.url=scm:git:git://github.com/michaelcouck/ikube.git
 preparationGoals=clean verify
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
