--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 	<version>4.4.0-SNAPSHOT</version>
 
     <scm>
-        <connection>scm:git:git://github.com/michaelcouck/ikubef</connection>
-        <url>scm:git:git://github.com/michaelcouck/ikube.git</url>
+        <url>https://github.com/michaelcouck/ikube</url>
+        <connection>scm:git:git://github.com/michaelcouck/ikube.git</connection>
         <developerConnection>scm:git:git://github.com/michaelcouck/ikube.git</developerConnection>
     </scm>
 
