--- a/release.properties
+++ b/release.properties
@@ -1,8 +1,8 @@
 #release configuration
 #Tue Nov 26 13:38:50 CET 2013
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-scm.url=https://github.com/michaelcouck/ikube.git
+pushChanges=false
+scm.url=https://github.com/michaelcouck/ikube
 preparationGoals=clean verify
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
