Preparing the presentation.

--- a/release.properties
+++ b/release.properties
@@ -4,7 +4,7 @@ scm.tagNameFormat=@{project.artifactId}-@{project.version}
 pushChanges=false
 scm.url=https://github.com/michaelcouck/ikube
 preparationGoals=clean verify
-remoteTagging=true
+remoteTagging=false
 scm.commentPrefix=[maven-release-plugin] 
 exec.additionalArguments=-P jenkins
 exec.snapshotReleasePluginAllowed=false
