--- a/release.properties
+++ b/release.properties
@@ -2,7 +2,7 @@
 #Tue Nov 26 13:38:50 CET 2013
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 pushChanges=false
-scm.url=http://github.com/michaelcouck/ikube
+scm.url=scm:git:git://github.com/michaelcouck/ikube.git
 preparationGoals=clean verify
 remoteTagging=false
 scm.commentPrefix=[maven-release-plugin] 
